--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -18,8 +18,8 @@
             <!-- Profile Image -->
             <ImageView
                 android:id="@+id/profile_image"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
                 android:src="@drawable/profile_image"
                 android:contentDescription="@string/profile_image"
                 app:layout_constraintStart_toStartOf="parent"
@@ -54,6 +54,19 @@
                 android:ellipsize="end"
                 android:maxLines="1" />
 
+            <!-- Address -->
+            <TextView
+                android:id="@+id/profile_address"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.address}"
+                android:textSize="16sp"
+                app:layout_constraintTop_toBottomOf="@id/profile_email"
+                app:layout_constraintStart_toStartOf="@id/profile_email"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:ellipsize="end"
+                android:maxLines="1" />
+
             <!-- Edit Profile Button -->
             <Button
                 android:id="@+id/edit_profile_button"
@@ -61,8 +74,8 @@
                 android:layout_height="wrap_content"
                 android:text="@string/edit_profile"
                 android:backgroundTint="@color/button"
-                app:layout_constraintTop_toBottomOf="@id/profile_email"
-                app:layout_constraintStart_toStartOf="@id/profile_name"
+                app:layout_constraintTop_toBottomOf="@id/profile_address"
+                app:layout_constraintStart_toStartOf="@id/profile_address"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="8dp" />
 
